--- a/Index.html
+++ b/Index.html
@@ -116,9 +116,7 @@
     "
   >
     <div class="container-fluid">
-      <nav
-        class="container-fluid navbar bg-light navbar-expand-lg fixed-top rounded-5"
-      >
+      <nav class="navbar bg-light navbar-expand-lg sticky-top rounded-5 mt-2">
         <div class="container-fluid">
           <button
             class="navbar-toggler"
@@ -144,10 +142,7 @@
           </div>
         </div>
       </nav>
-      <div
-        class="card rounded-4 border-0 my-5"
-        style="margin-top: 1.4cm !important"
-      >
+      <div class="card rounded-4 border-0" style="margin-top: 1.4cm !important">
         <div class="row align-items-center bg-plusLighter mx-4 mt-4" id="me">
           <div
             class="col-8"
