--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   >
     <div class="container-fluid">
       <nav
-        class="navbar bg-light navbar-expand-lg sticky-top rounded-5 border border-3"
+        class="navbar bg-light navbar-expand-lg sticky-top rounded-5 border border-3 mt-2"
       >
         <div class="container-fluid">
           <button
