--- a/index.html
+++ b/index.html
@@ -146,26 +146,16 @@
             </div>
           </div>
           <div class="col-4">
-            <div class="card mx-2 no-bg border border-0 hid">
-              <div class="card-header hid fs-3">Hey there!</div>
-              <div class="card-header">
-                <blockquote class="blockquote mb-0 hid">
-                  <strong
-                    >I am an enthusiastic young man who is deeply passionate
-                    about the IT field.</strong
-                  >
-                  <br />I am driven by a strong desire to learn and am always
-                  seeking new opportunities to expand my knowledge and skills.
-                  Whether working on my own or as part of a team, I bring a
-                  positive and proactive approach to everything I do. I have
-                  worked on multiple projects from web-development to data
-                  analytics.
-                </blockquote>
-              </div>
-            </div>
+            <div class="hid big-font-2 fw-bold">Hey there!</div>
+            <blockquote class="fs-3 text-gradient mb-0 hid">
+              I am an enthusiastic young man who is deeply passionate about the
+              IT field.
+              <br />
+              <span class="idk" id="element"></span>
+            </blockquote>
             <div
               class="no-bg row align-items-end text-end"
-              style="margin-top: 1rem"
+              style="margin-top: 5rem"
             >
               <ul
                 class="no-bg list-group no-border text-decoration-none justify-content-around"
@@ -175,7 +165,7 @@
                 >
                   <img src="./Feather/mail.svg" /> Mail :
                   <a
-                    class="no-bg text-decoration-none"
+                    class="no-bg text-secondary text-decoration-none"
                     href="mailto: ps47600@gmail.com"
                   >
                     Prashant Singh
@@ -198,8 +188,8 @@
             </div>
           </div>
         </div>
-        <hr class="mx-2 border border-2 border-lg" />
-        <div class="row text-center mx-4" id="skills">
+        <hr class="mx-2 border border-2 border-lg" id="skills" />
+        <div class="row text-center mx-4" style="margin: 7% 0% 0% 0%">
           <h1 class="heading big-font-2 mb-5 hid">Proefficiencies</h1>
           <div
             class="col-6"
@@ -431,10 +421,10 @@
             </div>
           </div>
         </div>
-        <hr class="mx-2 border border-2 border-lg" />
+        <hr id="projects" class="mx-2 border border-2 border-lg" />
         <div
           class="row text-center mx-4 justify-content-around bg-plusLighter"
-          id="projects"
+          style="margin: 7% 0% 0% 0%"
         >
           <h1 class="heading big-font-2">Projects</h1>
           <div class="col-1"></div>
@@ -586,8 +576,8 @@
           </div>
           <div class="col-1"></div>
         </div>
-        <hr class="mx-2 border border-2" />
-        <div class="row text-start mx-4" id="schooling">
+        <hr class="mx-2 border border-2" id="schooling" />
+        <div class="row text-start mx-4" style="margin: 7% 0% 0% 0%">
           <div class="col-1"></div>
           <div class="col-4">
             <h1 class="heading big-font-2 hid">Academics</h1>
@@ -814,8 +804,8 @@
           </div>
           <div class="col-1"></div>
         </div>
-        <hr class="mx-2 border border-2" />
-        <div class="row mx-4 bg-plusLighter" id="certificate">
+        <hr class="mx-2 border border-2" id="certificate" />
+        <div class="row mx-4 bg-plusLighter" style="margin: 7% 0% 0% 0%">
           <h1 class="heading big-font-2 p-4 text-center hid">
             <img height="50px" src="./Feather/certificate.png" class="me-2" />
             Certificates, Badges and Courses
@@ -912,8 +902,8 @@
           </div>
           <div class="col-2"></div>
         </div>
-        <hr class="mx-2 border border-2" />
-        <div class="row mx-4" id="other">
+        <hr class="mx-2 border border-2" id="other" />
+        <div class="row mx-4 py-5" style="margin: 4% 0% 0% 0%">
           <div class="col-1"></div>
           <div class="col-4">
             <h1 class="heading big-font-2 p-4 hid">
@@ -989,6 +979,12 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.10/typed.min.js"
+      integrity="sha512-hIlMpy2enepx9maXZF1gn0hsvPLerXoLHdb095CmRY5HG3bZfN7XPBZ14g+TUDH1aGgfLyPHmY9/zuU53smuMw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
   </body>
 </html>
