Donwload button added

--- a/index.html
+++ b/index.html
@@ -33,14 +33,25 @@
             data-bs-toggle="collapse"
             data-bs-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup"
-            aria-expanded="false"
+            aria-expanded="true"
             aria-label="Toggle navigation"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
 
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link fs-5 p-1 mx-2" href="#me">Me</a>
+          <div
+            class="collapse navbar-nav navbar-collapse"
+            id="navbarNavAltMarkup"
+          >
+            <a
+              download="true"
+              href="PSR_X.pdf"
+              class="fs-4 p-0 mx-2 btn btn-outline-danger rounded-4 px-3"
+              >Resume<img
+                class="ms-2 img-fluid"
+                src="./Feather/download-cloud.svg"
+            /></a>
+            <a class="ms-auto nav-link fs-5 p-1 mx-2" href="#me">Me</a>
             <a class="nav-link fs-5 p-1 mx-2" href="#skills">Skills</a>
             <a class="nav-link fs-5 p-1 mx-2" href="#projects">Projects</a>
             <a class="nav-link fs-5 p-1 mx-2" href="#schooling">Schooling</a>
